# regkit

./: .gitignore  LICENSE  README.md  REGRESSION_PACK_BUILD.md  pyproject.toml
.agents/skills/diagnostics/references/: remediation.md
.agents/skills/diagnostics/scripts/: diagnose.py  influence.py  render.py  triage.py
.agents/skills/linear-regression/references/: robust_se.md
.agents/skills/linear-regression/scripts/: fit.py
.agents/skills/logistic-regression/: SKILL.md
.agents/skills/model-comparison/: SKILL.md
.agents/skills/pre-analysis/: SKILL.md
.agents/skills/regularized-regression/: SKILL.md
demo/: regkit.tape
diagnostics/: SKILL.md
diagnostics/references/: plots_guide.md  remediation.md
diagnostics/scripts/: assumptions.py  bias_variance.py  diagnose.py  influence.py  nonlinearity.py  render.py  residuals.py  triage.py
evals/correctness/: test_anscombe.py  test_logistic.py  test_regularized.py
evals/detection/: test_comparison_verdicts.py  test_logistic_verdicts.py  test_synthetic_verdicts.py
evals/triggering/: README.md
examples/: run_comparison.sh  run_diagnostics.sh  run_linear_regression.sh  run_logistic.sh  run_pre_analysis.sh  run_regularized.sh  synth_data.py
linear-regression/: SKILL.md
linear-regression/references/: interpretation.md
linear-regression/scripts/: coefficients.py  interpret.py  render.py
regression_pack_core/: __init__.py  plotting.py  reports.py  schemas.py  style.css  validators.py
regression_pack_core/templates/: base_report.html.j2
tests/: README.md  make_datasets.py  run_real_datasets.sh
(+41 files in other folders)
