[project]
name = "regression-pack"
version = "0.1.0"
description = "Statistically rigorous regression skills for Claude — structured outputs, diagnostic-aware reports, plain-English interpretation"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }

dependencies = [
    "pandas>=2.2",
    "numpy>=2.0",
    "scikit-learn>=1.5",
    "statsmodels>=0.14",
    "scipy>=1.13",
    "plotly>=5.18",
    "pydantic>=2.5",
    "jinja2>=3.1",
]

[dependency-groups]
dev = [
    "pytest>=7.4",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["regression_pack_core"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]
